--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
         <div class="options">
-            <h2 id="player-1">Player 1</h2>
+            <h2 id="player-1">You:</h2>
             <p id="player-1-item"></p>
-            <h2 id="player-2">Player 2</h2>
+            <h2 id="player-2">Computer:</h2>
             <p id="player-2-item"></p>
         </div>
+
         <div class="players">
             <h4 id="message"></h4>
         </div>
-        <button id="play-btn">Play!</button>
-        <button id="reset-btn">Reset the game</button>
+
+        <div class="options">
+            <button class="rock-btn">rock</button>
+            <button class="paper-btn">paper</button>
+            <button class="scissors-btn">scissors</button>
+        </div>
+
+        <div class="buttons">
+            <button id="play-btn">Play!</button>
+            <button id="reset-btn">Reset the game</button>
+        </div>
+            
         <script src="script.js"></script>
     </body>
 </html>
